[gd_scene load_steps=7 format=3 uid="uid://clc44v0hqw7ci"]

[ext_resource type="Script" path="res://2MinuteJam/Scenes/MiniGames/SkyFallers/SkyFallers.gd" id="1_lx7mn"]
[ext_resource type="Texture2D" uid="uid://bdo37wprd0pk5" path="res://2MinuteJam/Assets/art/testsky.png" id="1_wg5e6"]
[ext_resource type="PackedScene" uid="uid://dp3h70ds6bbcy" path="res://2MinuteJam/Scenes/MiniGames/SkyFallers/Player/Player.tscn" id="2_chsnp"]
[ext_resource type="PackedScene" uid="uid://dsguxoqo0i7oi" path="res://2MinuteJam/Scenes/MiniGames/SkyFallers/Enemy/Chicken.tscn" id="4_xdfcd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ajggc"]
size = Vector2(26, 665)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1i7aj"]
size = Vector2(104, 658)

[node name="SkyFallers" type="Node2D"]
script = ExtResource("1_lx7mn")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 3.05176e-05)
scale = Vector2(0.640556, 0.36)
texture = ExtResource("1_wg5e6")
centered = false
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(3, 323)
shape = SubResource("RectangleShape2D_ajggc")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(1153, 0)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(3, 322.5)
shape = SubResource("RectangleShape2D_ajggc")

[node name="Player" parent="." instance=ExtResource("2_chsnp")]
position = Vector2(259, 614)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Chicken" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(141, 82)

[node name="Chicken2" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(71, 165)

[node name="Chicken4" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(211, 82)

[node name="Chicken5" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(141, 165)

[node name="Chicken7" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(281, 82)

[node name="Chicken8" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(211, 165)

[node name="Chicken10" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(351, 82)

[node name="Chicken11" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(281, 165)

[node name="Chicken13" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(421, 82)

[node name="Chicken14" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(351, 165)

[node name="Chicken16" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(491, 82)

[node name="Chicken17" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(421, 165)

[node name="Chicken19" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(561, 82)

[node name="Chicken20" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(491, 165)

[node name="Chicken22" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(631, 82)

[node name="Chicken23" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(561, 165)

[node name="Chicken25" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(631, 165)

[node name="Chicken35" parent="." instance=ExtResource("4_xdfcd")]
position = Vector2(701, 165)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-7, 319)
shape = SubResource("RectangleShape2D_1i7aj")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1156, 319)
shape = SubResource("RectangleShape2D_1i7aj")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
